After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693195 - Shell do not display any of the files/documents though the search options are enabled
Shell do not display any of the files/documents though the search options are...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-05 12:24 UTC by Justin
Modified: 2013-03-06 21:16 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Justin 2013-02-05 12:24:42 UTC
I am not sure if it is a shell or GCC or even a nautilus issue. I have enabled nautilus to be searched in the new search settings and Downloads is enabled. But from the shell search none of the files within downloads are displayed. I get these files from within nautilus search (and also from tracker search).

I do get pictures/Documents folders, though I disabled both from the search options. (Is the search items from Files only for folders or also for actual files/documents or is this feature still 'in the making'?)
Comment 1 Giovanni Campagna 2013-02-05 14:05:47 UTC
This looks like a bug in the nautilus search provider to me, reassigning.
Comment 2 Justin 2013-02-19 10:50:00 UTC
Can someone comment in here?
Comment 3 Cosimo Cecchi 2013-03-01 22:39:00 UTC
I now pushed a fix for this to git master, and verified it working correctly.
If you're testing packages and not building from source, make sure you're testing with a distribution that builds Nautilus with Tracker support enabled (Ubuntu doesn't do that, at least the last version didn't).
Comment 4 Justin 2013-03-05 08:00:10 UTC
AFAIK, search from within nautilus doesn't need tracker integration. Why can't we push the same results to the shell search?

I get all the files within nautilus but not in gnome shell.
Comment 5 Cosimo Cecchi 2013-03-06 21:16:15 UTC
Why did you reopen this bug? Did you test git master and it still didn't work?

The only difference between what is returned by the search provider and what is displayed in Nautilus itself is the crawl search inside the application is recursive. I don't think it's a good idea to make the search provider do recursive searches.
The provider does use Tracker and follows what is specified in the settings panel, and with the fix I mention in my previous comment it should work correctly.

Please reopen this bug if you tested the above fix from git and it didn't work for you, but feel free to open a different one if you want to discuss or propose improvements to the search strategy of the provider.