tracker: fix an error with latest Tracker

We name some query column variable results with "AS ?foo", but Tracker
now errors out on those clauses, not returning any result.
Since we don't need them, just remove them from the query string.

https://bugzilla.gnome.org/show_bug.cgi?id=693195